# rumoca

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  SECURITY.md
crates/rumoca/: Cargo.toml
crates/rumoca-analysis-dae/: Cargo.toml
crates/rumoca-analysis-dae/src/: lib.rs
crates/rumoca-bind-python/: Cargo.toml  pyproject.toml
crates/rumoca-bind-python/src/: lib.rs
crates/rumoca-bind-wasm/: Cargo.toml
crates/rumoca-bind-wasm/src/: class_browser_helpers.rs  lib.rs  simulation_api.rs  source_root_api.rs  stepper_api.rs  tests.rs
crates/rumoca-bind-wasm/src/tests/: source_modelica_roundtrip_tests.rs
crates/rumoca-codec/: Cargo.toml
crates/rumoca-codec-flatbuffers/: Cargo.toml
crates/rumoca-codec-flatbuffers/src/: bfbs.rs  codec.rs  config.rs  lib.rs
crates/rumoca-codec/src/: lib.rs
crates/rumoca-compile/: Cargo.toml  PIPELINE_INVARIANTS.md
crates/rumoca-compile/examples/: profile_source_root_completion.rs
crates/rumoca-compile/src/: codegen_api.rs  experiment.rs  instrumentation.rs  instrumentation_tests.rs  lib.rs  merge.rs  package_layout.rs  parse.rs  parsed_artifact_cache.rs  project_config.rs  project_config_tests.rs  session.rs  source_root_cache.rs  source_root_discovery.rs  traversal_adapter.rs
crates/rumoca-compile/src/session/: class_body.rs  class_body_semantics.rs  class_interface.rs  compile_phase_timing.rs  compile_support.rs  compiled_source_root.rs  declaration_index.rs  dependency_fingerprint.rs  diagnostic_adapters.rs  file_outline.rs  file_summary.rs  model_diagnostics.rs  namespace_completion.rs  package_def_map.rs  reachability.rs  semantic_summary_cache.rs  session_impl.rs  session_impl_diagnostics.rs  session_impl_inputs.rs  session_impl_model_queries.rs  session_impl_queries.rs  session_impl_query_indexes.rs  session_impl_source_root_loads.rs  session_impl_source_roots.rs  session_impl_symbols.rs  session_impl_workspace_symbol_queries.rs  session_snapshot.rs  strict_compile_diagnostics.rs  tests.rs
crates/rumoca-contracts/: Cargo.toml
crates/rumoca-contracts/src/: test_support.rs
crates/rumoca-contracts/tests/: conn_contracts.rs  decl_contracts.rs  eqn_contracts.rs  expr_contracts.rs  inst_contracts.rs  lex_contracts.rs  pkg_contracts.rs  sim_contracts.rs  type_contracts.rs
crates/rumoca-input/: Cargo.toml
crates/rumoca-input-gamepad/: Cargo.toml
crates/rumoca-input-gamepad/src/: lib.rs
crates/rumoca-input-keyboard/: Cargo.toml
crates/rumoca-input-keyboard/src/: lib.rs
crates/rumoca-input-types/: Cargo.toml
crates/rumoca-input-types/src/: device.rs  lib.rs
crates/rumoca-input/src/: config.rs  device.rs  devices.rs  lib.rs  signal_mapper.rs
crates/rumoca-input/src/engine/: compile.rs  mod.rs
crates/rumoca-ir-solve/: Cargo.toml
crates/rumoca-ir-solve/src/: layout.rs  lib.rs  linear_op.rs
crates/rumoca-phase-dae/: Cargo.toml
crates/rumoca-phase-dae/src/: balance_counting.rs  fold_start_values.rs  lib.rs  tests.rs
crates/rumoca-phase-dae/src/runtime_precompute/: clock.rs
crates/rumoca-phase-dae/src/tests/: tests_regressions.rs
crates/rumoca-phase-solve-lower/: Cargo.toml
crates/rumoca-phase-solve-lower/src/: ad.rs  dual.rs  layout.rs  lib.rs  lower.rs  sim_float.rs  statement.rs
crates/rumoca-phase-solve-lower/src/cranelift/: emit.rs  mod.rs
crates/rumoca-phase-solve-lower/src/eval/: array_helpers.rs  builtin_table.rs  clock_eval.rs  distribution_clock.rs  eval_expr_impl.rs  external_table.rs  mod.rs  pre_seed.rs  special.rs
crates/rumoca-phase-solve-lower/src/lower/: array_values.rs  expression_rows.rs  function_calls.rs  function_projection.rs  helpers.rs  root_conditions.rs  tests.rs
crates/rumoca-phase-solve-lower/src/wasm/: emit.rs  mod.rs
crates/rumoca-phase-structural/: Cargo.toml
crates/rumoca-phase-structural/src/: blt.rs  diagnostics.rs  ic_plan.rs  incidence.rs  lib.rs  matching.rs  projection_maps.rs  scalarize.rs  tarjan.rs  tearing.rs  types.rs
crates/rumoca-phase-structural/src/eliminate/: mod.rs  tests.rs
crates/rumoca-signal-frame/: Cargo.toml
crates/rumoca-signal-frame/src/: lib.rs
crates/rumoca-sim/: Cargo.toml
crates/rumoca-sim-core/: Cargo.toml
crates/rumoca-sim-core/src/: function_validation.rs  ic_solve.rs  lib.rs  reconstruct.rs  report_payload.rs  sim_trace_compare.rs  solver.rs  sparsity.rs  timeline.rs
crates/rumoca-sim-core/src/runtime/: alias.rs  (+18 more)
crates/rumoca-sim/src/: lib.rs  report.rs
crates/rumoca-solver-diffsol/: Cargo.toml
crates/rumoca-solver-diffsol/src/: lib.rs  prepare.rs  prepared_sim.rs  stepper.rs  test_support.rs
crates/rumoca-solver-rk45/: Cargo.toml
crates/rumoca-solver-rk45/src/: lib.rs
crates/rumoca-test-msl/: Cargo.toml
crates/rumoca-test-msl/tests/: backend_stress_test.rs  casadi_msl_test.rs  embedded_c_msl_test.rs  fmi2_msl_test.rs  fmi3_msl_test.rs  fmu_target_discovery.rs  msl_tests.rs
crates/rumoca-tool-dev/: Cargo.toml
crates/rumoca-tool-dev/coverage/: trim-gate-baseline.json
crates/rumoca-tool-dev/src/: crate_dag_cmd.rs  main.rs  main_tests.rs  repo_cli_cmd.rs  verify_cmd.rs  vscode_cmd.rs
crates/rumoca-tool-fmt/: Cargo.toml
crates/rumoca-tool-fmt/src/: formatter.rs  lib.rs
crates/rumoca-tool-lint/: Cargo.toml
crates/rumoca-tool-lint/src/: lint.rs
crates/rumoca-tool-lsp/: Cargo.toml
crates/rumoca-tool-lsp/src/: completion_metrics.rs  helpers.rs  server.rs  traversal_adapter.rs
crates/rumoca-transport-websocket/: Cargo.toml
crates/rumoca-transport-websocket/src/: lib.rs
crates/rumoca-viz-web/: Cargo.toml
crates/rumoca-viz-web/src/: lib.rs  sim_viewer_server.rs
crates/rumoca-viz-web/web/: results_app.css  results_app.js  viewer.html  visualization_shared.js
crates/rumoca/examples/: profile_msl.rs  quadrotor_sil.rs  stepper_3d.rs
crates/rumoca/src/: compiler.rs  error.rs  main.rs  target_manifest.rs
crates/rumoca/tests/: architecture_hardening_test.rs  backend_template_runtime_regression.rs  balance_diagnostic.rs  casadi_vs_rumoca_test.rs  examples_smoke.rs  for_eq_array_test.rs  interface_flow_balance.rs  msl_sim_regression.rs  pipeline_test.rs  tiered_models.rs
(+215 files in other folders)
