[package]
name = "rumoca-bind-wasm"
description = "WebAssembly bindings for Rumoca compile and optional simulation surfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rumoca-compile = { workspace = true }
rumoca-sim = { workspace = true, optional = true }
rumoca-tool-lint = { workspace = true }
rumoca-tool-lsp = { workspace = true }
bincode = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = ["console_error_panic_hook"]
full-web = ["sim-diffsol", "stepper-diffsol"]
sim-diffsol = ["dep:rumoca-sim", "rumoca-sim/solver-diffsol"]
sim-rk45 = ["dep:rumoca-sim", "rumoca-sim/solver-rk45"]
stepper-diffsol = ["sim-diffsol"]
wasm-rayon = ["dep:wasm-bindgen-rayon"]

[lints]
workspace = true
