[package]
name = "rumoca-codec-flatbuffers"
description = "FlatBuffer schema reflection and codec support for Rumoca lockstep I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-signal-frame = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
