[package]
name = "rumoca-compile"
description = "Multi-file Modelica compilation pipeline for Rumoca"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["rumoca-phase-flatten/tracing"]

[dependencies]
rumoca-ir-ast = { workspace = true }
rumoca-ir-flat = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-ir-core = { workspace = true }
rumoca-phase-parse = { workspace = true }
rumoca-phase-resolve = { workspace = true }
rumoca-phase-typecheck = { workspace = true }
rumoca-phase-instantiate = { workspace = true }
rumoca-phase-flatten = { workspace = true }
rumoca-phase-dae = { workspace = true }
rumoca-phase-structural = { workspace = true }
rumoca-phase-codegen = { workspace = true }
rumoca-core = { workspace = true }
anyhow = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
bincode = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
