[package]
name = "rumoca-input-types"
description = "Shared input vocabulary (gamepad/keyboard types, snapshots, events) for Rumoca"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
