[package]
name = "rumoca-ir-solve"
description = "Solver-facing prepared IR for Rumoca simulation backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }

[lints]
workspace = true
