[package]
name = "rumoca-phase-dae"
description = "ToDae phase for the Rumoca Modelica compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-analysis-dae = { workspace = true }
rumoca-core = { path = "../rumoca-core" }
rumoca-ir-flat = { path = "../rumoca-ir-flat" }
rumoca-ir-dae = { path = "../rumoca-ir-dae" }
rumoca-ir-core = { path = "../rumoca-ir-core" }
indexmap = "2.2"
rustc-hash = { workspace = true }
thiserror = "2.0"
miette = "7.4"

[lints]
workspace = true
