[package]
name = "rumoca-phase-solve-lower"
description = "Lower DAE-IR into solver-facing row IR plus the runtime that consumes it (interpreter + AD + optional cranelift/wasm JIT)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
]
wasm = ["dep:wasm-encoder"]

[dependencies]
rumoca-ir-core = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-ir-solve = { workspace = true }
indexmap = { workspace = true }
cranelift-codegen = { version = "0.125", optional = true }
cranelift-frontend = { version = "0.125", optional = true }
cranelift-jit = { version = "0.125", optional = true }
cranelift-module = { version = "0.125", optional = true }
wasm-encoder = { version = "0.241", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
rumoca-core = { workspace = true }
wasmparser = "0.241"

[lints]
workspace = true
