[package]
name = "rumoca-sim-core"
description = "Core simulation primitives for Rumoca (DAE prep, mass matrix, runtime, sparsity)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-core = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-ir-core = { workspace = true }
rumoca-analysis-dae = { workspace = true }
rumoca-phase-structural = { workspace = true }
rumoca-ir-solve = { workspace = true }
rumoca-phase-solve-lower = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["unbounded_depth"] }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
rumoca-phase-solve-lower = { workspace = true, features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rumoca-phase-solve-lower = { workspace = true, features = ["cranelift"] }

[dev-dependencies]
levenberg-marquardt = "0.15"
nalgebra = "0.34"

[lints]
workspace = true
