[package]
name = "rumoca-solver-diffsol"
description = "Diffsol-backed simulation runtime for Rumoca"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Sim-core is the single front door: IR types, structural analysis,
# Span/timer helpers, and the runtime expression evaluator (eval_dae)
# are all reached through its re-export modules.
rumoca-sim-core = { workspace = true }
diffsol = { version = "0.10" }
levenberg-marquardt = "0.15"
nalgebra = "0.34"
indexmap = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
