[package]
name = "rumoca-test-msl"
description = "MSL regression and OMC-comparison test harness for rumoca"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rumoca-sim-worker"
path = "src/bin/rumoca-sim-worker.rs"

[dependencies]
anyhow = { workspace = true }
bincode = "1.3"
clap = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
rumoca-compile = { workspace = true }
rumoca-sim = { workspace = true, features = ["solver-diffsol"] }

[dev-dependencies]
walkdir = "2.5"
ureq = "2.9"
dirs = "5.0"
rayon = { workspace = true }
ntest = "0.9"
tempfile = { workspace = true }
zip = { version = "2.4", default-features = false, features = ["deflate"] }
flate2 = { workspace = true }
tar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rumoca-analysis-dae = { workspace = true }
rumoca-ir-ast = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-ir-flat = { workspace = true }
rumoca-phase-flatten = { workspace = true }
rumoca-phase-instantiate = { workspace = true }
rumoca-phase-parse = { workspace = true }
rumoca-phase-resolve = { workspace = true }
rumoca-phase-dae = { workspace = true }
rumoca-phase-structural = { workspace = true }
rumoca-phase-typecheck = { workspace = true }
rumoca-compile = { workspace = true }

[lints]
workspace = true
