[package]
name = "rumoca-tool-lsp"
description = "Language Server Protocol implementation for Modelica"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rumoca-lsp"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
rumoca-compile = { workspace = true }
rumoca-sim = { workspace = true, features = ["solver-diffsol"] }
rumoca-tool-fmt = { workspace = true }
rumoca-tool-lint = { workspace = true }
lsp-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

# Server-only dependencies (not needed for WASM)
tower-lsp = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["server"]
server = ["dep:tower-lsp", "dep:tokio"]

[dev-dependencies]
futures-util = { workspace = true }

[lints]
workspace = true
