[package]
name = "rumoca-viz-web"
description = "Web visualization assets and HTML shell for Rumoca simulation reports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
tiny_http = "0.12"

[lints]
workspace = true
