[package]
name = "rumoca"
description = "Modelica compiler written in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["modelica", "compiler", "dae", "simulation"]
categories = ["compilers", "science", "simulation"]
default-run = "rumoca"

[[bin]]
name = "rumoca"
path = "src/main.rs"

[features]
default = []
# Pulls in sim's runner module: transports, codecs, input devices,
# signal-hook, viz-web. Cross-compiled binary builds (musl, macOS, Windows)
# leave this off so gilrs/libudev-sys aren't pulled in.
lockstep = ["rumoca-sim/runner"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "rumoca-compile/tracing"]

[dependencies]
# Internal crates: CLI consumes the high-level facades only.
# rumoca-compile wraps all compilation phases.
# rumoca-sim wraps simulation primitives, solvers, and (under the
# `lockstep` feature here) the lockstep runner.
rumoca-compile = { workspace = true }
rumoca-sim = { workspace = true, features = ["solver-diffsol", "report"] }
rumoca-tool-fmt = { workspace = true }
rumoca-tool-lint = { workspace = true }

# External dependencies
anyhow = { workspace = true }
mimalloc = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
walkdir = { workspace = true }
zip = { workspace = true }

[[example]]
name = "stepper_demo"
path = "examples/stepper_demo.rs"

[[example]]
name = "stepper_3d"
path = "examples/stepper_3d.rs"

[[example]]
name = "stepper_debug"
path = "examples/stepper_debug.rs"

[[example]]
name = "quadrotor_sil"
path = "examples/quadrotor_sil.rs"

[dev-dependencies]
crossterm = "0.28"
tungstenite = "0.26"
tempfile = { workspace = true }
mimalloc = { workspace = true }
rumoca-core = { workspace = true }
# MSL test dependencies
flate2 = "1.0"
tar = "0.4"
walkdir = "2.5"
ureq = "2.9"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
rayon = { workspace = true }
ntest = "0.9"  # Test timeouts
# Direct phase access for debugging/analysis tests
rumoca-ir-ast = { workspace = true }
rumoca-ir-flat = { workspace = true }
rumoca-ir-core = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-phase-flatten = { workspace = true }
rumoca-phase-instantiate = { workspace = true }
rumoca-phase-parse = { workspace = true }
rumoca-phase-resolve = { workspace = true }
rumoca-phase-codegen = { workspace = true }
rumoca-phase-dae = { workspace = true }
rumoca-phase-typecheck = { workspace = true }
rumoca-analysis-dae = { workspace = true }

[lints]
workspace = true
